--- a/public/index.html
+++ b/public/index.html
@@ -39,7 +39,7 @@
     -->
     <title>DUCITC | Dania University College IT Club.</title>
   </head>
-  <body>
+  <body style="background-Color:#020c51; color: aliceblue;">
     <noscript> You need to enable JavaScript to run this app. </noscript>
     <div id="root"></div>
     <!--
